# SaaS-Bench

./: .gitignore  README.md  overview.md  pyproject.toml  saas_bench_implementation_plan.md
docs/: BATCH_SCHEMA_DESIGN.md
scripts/: analyze_tutorials_batch.py  update_state_from_workflows.py  validate_workflows.py
src/saas_bench/: __init__.py
src/saas_bench/core/: __init__.py  environment.py  evaluation.py
src/saas_bench/domains/: __init__.py
src/saas_bench/domains/databricks/: __init__.py  policy.py  registry.py  state.py  tools.py
src/saas_bench/tutorial_processor/: __init__.py  llm_client.py  scraper.py  workflow_extractor.py  workflow_serializer.py
src/saas_bench/utils/: yaml_loader.py
src/saas_bench/web/: __init__.py  api.py  server.py  state_computer.py
tests/: __init__.py  test_databricks_state.py  test_databricks_tools.py  test_environment.py  test_evaluation.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  api.ts  index.css
web/src/components/: StateTransition.css  StateTransition.tsx  StateVisualization.css  StateVisualization.tsx  WorkflowSelector.css  WorkflowSelector.tsx  WorkflowSteps.css  WorkflowSteps.tsx
workflows/databricks/: databricks-001.yaml  databricks-002.yaml  databricks-003.yaml  databricks-004.yaml  databricks-005.yaml
